# LinuxApplicationDevelopment2020

./: README.md
03_TerminalProject/: Makefile  Show.c
04_Multifile/: Makefile
05_Environmental/: CMakeLists.txt  prog.c
06_Debugging/: doubleFree.c
07_DebuggingTracing/: Makefile  preload.c
08_TestingCoverage/: Makefile.am  configure.ac  test.sh
08_TestingCoverage/src/: Makefile.am  buf.h
08_TestingCoverage/test/: test.ts
09_I18L10n/: Makefile.am  configure.ac  guess.c  guess.pot  guess_ru.po  run.sh
10_Documenting/: Makefile.am  configure.ac  guess.c  guess.pot  guess_ru.po  roman.h
11_Toolkits/: Makefile  prog.c
